--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+<link rel="stylesheet" type="text/css" href="Default.css">
+<link rel="icon" type="image/ico" href="Images/Logo.ico"/>
+<title>PDP Wheel Decide</title>
+</head>
+
+<h1 style="text-align: center;"><img alt="" src="http://i.imgur.com/Q7cBbb6.png" style="width: 600px; height: 144px; max-width:100%; height:auto"/>
+
+<p>
+  <a href="http://hullst.github.io/326.html"><img alt="" src="Images/326.png" align=center class="hvr-float" hspace="10" vspace="10"></a>
+      </p>
+      <a href="http://hullst.github.io/Timer/index.html"><img alt="" src="Images/timer.png" align=center class="hvr-float" hspace="10" vspace="10" height="354" width="354"></a>
+</h1>
+
 </body>
 </html>
