--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <p>
   <a href="http://andy-fr.github.io/326.html"><img alt="" src="Images/326.png" align=center class="hvr-float" hspace="10" vspace="10"></a>
       </p>
-      <a href="http://hullst.github.io/Timer/index.html"><img alt="" src="Images/timer.png" align=center class="hvr-float" hspace="10" vspace="10" height="354" width="354"></a>
+      <a href="http://andy-fr.github.io/Timer/index.html"><img alt="" src="Images/timer.png" align=center class="hvr-float" hspace="10" vspace="10" height="354" width="354"></a>
 </h1>
