--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1 style="text-align: center;"><img alt="" src="http://i.imgur.com/USQfTgP.png" style="width: 600px; height: 144px; max-width:100%; height:auto"/>
 
 <p>
-  <a href="http://andy-fr.github.io/327.html"><img alt="" src="Images/327.png" align=center class="hvr-float" hspace="10" vspace="10"></a>
+  <a href="http://andy-fr.github.io/327.html"><img alt="" src="Images/chevy-327-emblem.jpg" align=center class="hvr-float" hspace="10" vspace="10"></a>
       </p>
       <a href="http://andy-fr.github.io/Timer/index.html"><img alt="" src="Images/timer.png" align=center class="hvr-float" hspace="10" vspace="10" height="354" width="354"></a>
 </h1>
